Fixed Bedrifter not showing up properly on mobile, and scaled the logos so they are all the same resolution

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,10 +46,6 @@ a {
     transform: scale(1.2);
 }
 
-#dnb-logo {
-    max-width: 250px;
-}
-
 .text {
     font-size: 20px;
 }
@@ -168,8 +164,8 @@ h1.anim-text {
     width: 30%;
 }
 
-#meme {
-    font-size: 64px;
+#tba {
+    display: none;
 }
 
 .program {
@@ -411,6 +407,27 @@ h1.anim-text {
 
     .bed-logo:hover {
         transform: scale(1.0);
+    }
+
+    .bed-text {
+        display: none;
+    }
+
+    .logo-item {
+        position: static;
+        width: 65%;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+
+    #bedrifter-content {
+        justify-items: center;
+    }
+
+    .bed-logo {
+        max-width: 100%;
+        margin: auto;
+        padding: 0%;
     }
 
     #navbar {
